[gd_scene load_steps=5 format=4 uid="uid://cftpnnq478amn"]

[ext_resource type="Theme" uid="uid://cd3cg4gssehva" path="res://assets/misc/ui-theme.tres" id="1_4v732"]
[ext_resource type="Script" uid="uid://bbblyjy6phmnc" path="res://assets/scripts/menu.gd" id="1_bvijd"]
[ext_resource type="TileSet" uid="uid://lnm0dxsgi887" path="res://assets/tilesets/environment-tiles.tres" id="2_hcovm"]
[ext_resource type="Texture2D" uid="uid://dbkahsrkm2gco" path="res://assets/sprites/klein-title.png" id="3_c7xw5"]

[node name="Menu" type="Control"]
layout_mode = 3
anchor_right = 2.0
anchor_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_bvijd")
level_count = 10

[node name="Background" type="TileMapLayer" parent="."]
modulate = Color(0.61339, 0.61339, 0.61339, 1)
scale = Vector2(12.5, 12.5)
tile_map_data = PackedByteArray("AAD/////AQAAAAAAAAABAP//AQAAAAAAAAADAP//AQAAAAAAAAAFAP//AQAAAAAAAAAHAP//AQAAAAAAAAAJAP//AQAAAAAAAAALAP//AQAAAAAAAAD//wEAAQAAAAAAAAABAAEAAQAAAAAAAAADAAEAAQAAAAAAAAAFAAEAAQAAAAAAAAAHAAEAAQAAAAAAAAAJAAEAAQAAAAAAAAALAAEAAQAAAAAAAAD//wMAAQAAAAAAAAABAAMAAQAAAAAAAAADAAMAAQAAAAAAAAAFAAMAAQAAAAAAAAAHAAMAAQAAAAAAAAAJAAMAAQAAAAAAAAALAAMAAQAAAAAAAAALAAUAAQAAAAAAAAAJAAUAAQAAAAAAAAAHAAUAAQAAAAAAAAAFAAUAAQAAAAAAAAADAAUAAQAAAAAAAAABAAUAAQAAAAAAAAD//wUAAQAAAAAAAAD//wcAAQAAAAAAAAD//wkAAQAAAAAAAAD//wsAAQAAAAAAAAABAAsAAQAAAAAAAAABAAkAAQAAAAAAAAABAAcAAQAAAAAAAAADAAcAAQAAAAAAAAADAAkAAQAAAAAAAAADAAsAAQAAAAAAAAAFAAsAAQAAAAAAAAAFAAkAAQAAAAAAAAAFAAcAAQAAAAAAAAAHAAcAAQAAAAAAAAAHAAkAAQAAAAAAAAAHAAsAAQAAAAAAAAAJAAsAAQAAAAAAAAAJAAkAAQAAAAAAAAAJAAcAAQAAAAAAAAALAAcAAQAAAAAAAAALAAkAAQAAAAAAAAALAAsAAQAAAAAAAAA=")
tile_set = ExtResource("2_hcovm")

[node name="MainMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -38.0
offset_right = 30.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="MainMenu/ButtonContainer"]
layout_mode = 2
theme = ExtResource("1_4v732")
text = "Start
"

[node name="ExitButton" type="Button" parent="MainMenu/ButtonContainer"]
layout_mode = 2
theme = ExtResource("1_4v732")
text = "Exit"

[node name="LevelSelect" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="LevelSelect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_right = 60.0
offset_bottom = 120.0
grow_horizontal = 2
columns = 4

[node name="Title" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -297.0
offset_top = 141.0
offset_right = 297.0
offset_bottom = 367.0
grow_horizontal = 2
pivot_offset = Vector2(297, 113)
texture = ExtResource("3_c7xw5")
stretch_mode = 5

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
zoom = Vector2(0.5, 0.5)

[connection signal="pressed" from="MainMenu/ButtonContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MainMenu/ButtonContainer/ExitButton" to="." method="_on_exit_button_pressed"]
